--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" href="styles/all.css" type="text/css" media="all">
 		
 
-		
 
 		<script type="text/javascript" src="scripts/Inputs.js"></script>
 
@@ -14,6 +13,7 @@
 		<script type="text/javascript" src="scripts/Canvas.js"></script>
 		<script type="text/javascript" src="scripts/WebGL.js"></script>
 		<script type="text/javascript" src="scripts/Texture.js"></script>
+
 
 		<script type="text/javascript" src="scripts/Area.js"></script>
 		<script id="area-fs" type="x-shader/x-fragment">
@@ -58,6 +58,7 @@
 
 <!-- ***************************************** -->
 
+		<script type="text/javascript" src="scripts/Character.js"></script>
 		<script type="text/javascript" src="scripts/Characters.js"></script>
 		<script id="characters-fs" type="x-shader/x-fragment">
 			#ifdef GL_ES
