More network and fix viewport update issue.
More network and fix viewport update issue.

--- a/www/index.html
+++ b/www/index.html
@@ -11,9 +11,15 @@
 		<script src="/socket.io/socket.io.js"></script>
 
 		<script type="text/javascript" src="scripts/common/gl-matrix.js"></script>
-		<script type="text/javascript" src="scripts/common/CharacterFactory.js"></script>
+		
 		<script type="text/javascript" src="scripts/common/Character.js"></script>
+		<script type="text/javascript" src="scripts/common/CharacterFactory.js"></script>
+
+		<script type="text/javascript" src="scripts/common/Player.js"></script>
+		<script type="text/javascript" src="scripts/common/PlayerFactory.js"></script>
+
 		<script type="text/javascript" src="scripts/common/Entities.js"></script>
+		<script type="text/javascript" src="scripts/common/Machine.js"></script>
 
 		<script type="text/javascript" src="scripts/client/Network.js"></script>
 		<script type="text/javascript" src="scripts/client/Inputs.js"></script>
