--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,9 @@
 		<script type="text/javascript" src="scripts/client/Network.js"></script>
 		<script type="text/javascript" src="scripts/client/Inputs.js"></script>
 		<script type="text/javascript" src="scripts/client/Canvas.js"></script>
+
+
+		<script type="text/javascript" src="scripts/client/VertexAttributeBuffer.js"></script>
 		<script type="text/javascript" src="scripts/client/Program.js"></script>
 		<script type="text/javascript" src="scripts/client/WebGL.js"></script>
 		<script type="text/javascript" src="scripts/client/Texture.js"></script>
